--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,5 +53,5 @@ jobs:
       - name: Update container
         run: |
           cd /home/ademun/print3d-order-bot
-          docker compose pull app
-          docker compose up -d app
+          docker compose pull print3d-order-bot
+          docker compose up -d print3d-order-bot
