--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,4 +54,4 @@ jobs:
         run: |
           cd /home/ademun/print3d-order-bot
           docker compose pull print3d-order-bot
-          docker compose up -d print3d-order-bot
+          docker compose up -d bot
